[tool.poetry]
name = "dhos-rules-api"
version = "0.0.1"
description = "Polaris Rules API"
authors = ["Jon Daly <jonathan.daly@sensynehealth.com>"]
keywords = ["Swagger", "Rules"]
repository = "https://github.com/polaris-foundation/polaris-rules-api"

[tool.poetry.dependencies]
python = "^3.9"
cachetools = "5.*"
flask-batteries-included = {version="3.*", extras = ["apispec"]}
she-logging = "1.*"

[tool.poetry.dev-dependencies]
bandit = "*"
black = "*"
coloredlogs = "*"
coverage = "*"
isort = "*"
mock = "*"
mypy = "*"
pytest = "*"
pytest-dhos = "*"
pytest-flask = "*"
pytest-mock = "*"
requests_mock = "*"
safety = "*"
tox = "*"
types-cachetools = "*"
types-mock = "*"
types-PyYAML = "*"
types-requests = "*"
types-waitress = "*"

[tool.mypy]
namespace_packages=true
ignore_missing_imports=false
disallow_untyped_defs=true

[[tool.mypy.overrides]]
module = [
    "waitress",
    "pytest",
    "flask.testing",
    "apispec.*",
    "connexion",
    "apispec_webframeworks.*",
    "pytest_mock",
    "jose",
    "flask",
    "sadisplay"
]
ignore_missing_imports = true

[tool.isort]
profile = "black"
known_third_party = ["apispec", "apispec_webframeworks", "behave", "cachetools", "click", "clients", "connexion", "dateutil", "environs", "flask", "flask_batteries_included", "helpers", "jose", "marshmallow", "pytest", "reporting", "reportportal_behave", "requests", "requests_mock", "she_logging", "waitress", "yaml"]

[tool.black]
line-length = 88
target-version = ["py39"]
